<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BottomSheetFragment"
    android:id="@+id/coordinator_layout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_cancel"
                    android:tint="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/toolbar_title"
                    android:text="Job Title"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:padding="@dimen/padding_normal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <View
                    android:layout_width="100dp"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_gravity="center"
                    android:id="@+id/view_line"
                    android:background="@drawable/rectangle_back"/>

                <TextView
                    android:id="@+id/iv_service_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_title"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_extra_bigger" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_small"
                    android:layout_marginTop="@dimen/margin_normal"
                    >

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_vehicle_image"
                        android:layout_width="60dp"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_height="match_parent"
                        android:elevation="@dimen/cv_elevation_small"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                        app:srcCompat="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/company_name"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_normal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/job_location"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textSize="@dimen/text_size_normal" />


                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/times_ago"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textSize="@dimen/text_size_small" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_easy_apply"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_34sdp"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:text="Easy Apply"
                        android:textSize="@dimen/text_size_small"
                        app:cornerRadius="@dimen/cv_radius_large"
                        app:elevation="@dimen/cv_elevation_normal"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_small"
                        android:text="Save"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        app:cornerRadius="@dimen/cv_radius_large"
                        app:elevation="@dimen/cv_elevation_normal"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_back"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_description"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_bigger" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textSize="@dimen/text_size_normal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textSize="@dimen/text_size_normal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>